--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>salao</title>
+    
 
-    <!-- Icones -->
+    <!-- Import the component -->
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
+ 
+        <!-- Icones -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
 
     <!-- Swiper -->
@@ -167,10 +172,10 @@
                   </p>
                   <cite>
                     <img
-                      src="assets/fotos/10.JPG"
-                      alt="Foto de Caroline Barbosa"
+                      src="assets/fotos/maraia.jpg"
+                      alt="Foto de Maria Helena"
                     />
-                    Caroline Barbosa
+                    Maria Helena
                   </cite>
                 </blockquote>
               </div>
